--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
 <h1>Privacy Policy</h1>
-Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.
+<p>Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</br>
 
-This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
+This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</br>
 
-If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
+If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</br>
 
-The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "TUS Santander" unless otherwise defined in this Privacy Policy.
+The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "TUS Santander" unless otherwise defined in this Privacy Policy.</p>
 
-Information Collection and Use
+<b>Information Collection and Use</b>
 
-For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.
+<p>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.</br>
 
-The app does use third party services that may collect information used to identify you.
+The app does use third party services that may collect information used to identify you.</p>
 
-Link to privacy policy of third party service providers used by the app
+<b>Link to privacy policy of third party service providers used by the app</b>
 <ul>
   <li><a href="https://policies.google.com/privacy">Google Play Services</a></li>
   <li><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
-</ul>
+</ul></br>
 
 <b>Log Data</b>
 
-I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
+<p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
 
-Service Providers
+<b>Service Providers</b>
 
-I may employ third-party companies and individuals due to the following reasons:
+<p>I may employ third-party companies and individuals due to the following reasons:</br>
 <ul>
   <li>To facilitate our Service;</li>
   <li>To provide the Service on our behalf;</li>
   <li>To perform Service-related services; or</li>
   <li>To assist us in analyzing how our Service is used.</li>
-</ul>
-I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
+</ul></br>
+I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
 
-Security
+<b>Security</b>
 
-I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
+<p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
 
+  <b>Changes to This Privacy Policy</b>
 
-Changes to This Privacy Policy
+<p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
 
-I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+<b>Contact Us</b>
 
-Contact Us
-
-If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.
+<p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</p>
