--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<h1 style="font-family:sans-serif;">Privacy Policy</h1>
+<html style="font-family:sans-serif;text-align:justify;">
+  <h1 style="font-family:sans-serif;">Privacy Policy</h1>
 <p style="font-family:sans-serif;">Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</br>
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</br>
@@ -11,9 +12,8 @@ The terms used in this Privacy Policy have the same meanings as in our Terms and
 
 <p style="font-family:sans-serif;">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.</br>
 
-The app does use third party services that may collect information used to identify you.</p>
-
-<b style="font-family:sans-serif;">Link to privacy policy of third party service providers used by the app</b>
+The app does use third party services that may collect information used to identify you.</br>
+Link to privacy policy of third party service providers used by the app</p></br>
 <ul style="font-family:sans-serif;">
   <li style="font-family:sans-serif;"><a href="https://policies.google.com/privacy">Google Play Services</a></li>
   <li style="font-family:sans-serif;"><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
@@ -45,3 +45,5 @@ I want to inform users of this Service that these third parties have access to y
 <b style="font-family:sans-serif;">Contact Us</b>
 
 <p style="font-family:sans-serif;">If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.</p>
+
+</html>
