--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html style="font-family:sans-serif;text-align:justify;">
-  <h1 style="font-family:sans-serif;text-align:justify;"">Privacy Policy</h1>
-<p style="font-family:sans-serif;text-align:justify;"">Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</br>
+  <h1 style="font-family:sans-serif;text-align:justify;">Privacy Policy</h1>
+<p style="font-family:sans-serif;text-align:justify;">Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</br>
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</br>
 
@@ -8,15 +8,15 @@ If you choose to use my Service, then you agree to the collection and use of inf
 
 The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "TUS Santander" unless otherwise defined in this Privacy Policy.</p>
 
-<b style="font-family:sans-serif;text-align:justify;"">Information Collection and Use</b>
+<b style="font-family:sans-serif;text-align:justify;">Information Collection and Use</b>
 
-<p style="font-family:sans-serif;text-align:justify;"">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.</br>
+<p style="font-family:sans-serif;text-align:justify;">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.</br>
 
 The app does use third party services that may collect information used to identify you.</br>
 Link to privacy policy of third party service providers used by the app</p>
-<ul style="font-family:sans-serif;text-align:justify;"">
-  <li style="font-family:sans-serif;text-align:justify;""><a href="https://policies.google.com/privacy">Google Play Services</a></li>
-  <li style="font-family:sans-serif;text-align:justify;""><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
+<ul style="font-family:sans-serif;text-align:justify;">
+  <li style="font-family:sans-serif;text-align:justify;"><a href="https://policies.google.com/privacy">Google Play Services</a></li>
+  <li style="font-family:sans-serif;text-align:justify;"><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
 </ul></br>
 
 <b style="font-family:sans-serif;text-align:justify;">Log Data</b>
