--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html style="font-family:sans-serif;text-align:justify;">
   <h1 style="font-family:sans-serif;text-align:justify;">Privacy Policy</h1>
-<p style="font-family:sans-serif;text-align:justify;">Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</br>
+<p style="font-family:sans-serif;text-align:justify;">Alberto Gozalo built the "TUS Santander" app as a Free app. This SERVICE is provided by Alberto Gozalo at no cost and is intended for use as is.</p>
 
-This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</br>
+<p style="font-family:sans-serif;text-align:justify;">This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
-If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</br>
+<p style="font-family:sans-serif;text-align:justify;">If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
 
-The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "TUS Santander" unless otherwise defined in this Privacy Policy.</p>
+<p style="font-family:sans-serif;text-align:justify;">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at "TUS Santander" unless otherwise defined in this Privacy Policy.</p>
 
 <b style="font-family:sans-serif;text-align:justify;">Information Collection and Use</b>
 
