--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <b style="font-family:sans-serif;text-align:justify;">Information Collection and Use</b>
 
-<p style="font-family:sans-serif;text-align:justify;">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.</br>
+<p style="font-family:sans-serif;text-align:justify;">For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Android advertising identifier. The information that I request will be retained on your device and is not collected by me in any way.
 The app does use third party services that may collect information used to identify you.</br>
 Link to privacy policy of third party service providers used by the app</p>
 <ul style="font-family:sans-serif;text-align:justify;">
@@ -30,7 +30,7 @@ Link to privacy policy of third party service providers used by the app</p>
   <li>To provide the Service on our behalf;</li>
   <li>To perform Service-related services; or</li>
   <li>To assist us in analyzing how our Service is used.</li>
-</ul></br>
+</ul>
 I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
 
 <b style="font-family:sans-serif;text-align:justify;">Security</b>
