--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 The app does use third party services that may collect information used to identify you.</br>
 Link to privacy policy of third party service providers used by the app</p>
 <ul style="font-family:sans-serif;text-align:justify;">
-  <li style="font-family:sans-serif;text-align:justify;"><a href="https://policies.google.com/privacy">Google Play Services</a></li>
-  <li style="font-family:sans-serif;text-align:justify;"><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
+  <li style="font-family:sans-serif;text-align:justify;color: blue;"><a href="https://policies.google.com/privacy">Google Play Services</a></li>
+  <li style="font-family:sans-serif;text-align:justify;color: blue;"><a href="https://firebase.google.com/policies/analytics">Firebase Analytics</a></li>
 </ul></br>
 
 <b style="font-family:sans-serif;text-align:justify;">Log Data</b>
